# rupa_project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  note.md  pyproject.toml  requirements.txt  vector_db.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
alembic/versions/: 20260518_0001_initial_schema.py
app/: __init__.py  bootstrap.py  cli.py  config.py  exceptions.py  logging_setup.py  main.py  observability.py  runtime_keys.py  secrets_loader.py
app/auth/: __init__.py  service.py
app/db/: __init__.py  models.py  repositories.py  session.py
app/services/: __init__.py  chat.py  llm.py  rag.py  stt.py  tts.py
app/ui/: __init__.py  styles.py  ux.py
app/ui/components/: api_keys.py  audio_player.py  chat_window.py  nav.py  sidebar.py  voice_input.py
app/ui/components/hold_to_talk/: __init__.py
app/ui/components/hold_to_talk/frontend/: index.html
app/ui/pages/: __init__.py  admin.py  chat.py  login.py
app/utils/: __init__.py  rate_limit.py  text.py
tests/: __init__.py  conftest.py
tests/integration/: test_chat_flow.py
tests/unit/: test_auth.py  test_config.py  test_exceptions.py  test_llm.py  test_rag.py  test_rate_limit.py  test_repositories.py  test_text_utils.py
