[project]
name = "rupa-ai"
version = "1.0.0"
description = "Rupa AI - Production-grade bilingual (Bangla/English) conversational assistant with persistent memory, RAG, and voice I/O."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Sabyasachee Das" },
]
keywords = ["streamlit", "llm", "rag", "bangla", "chatbot", "pinecone"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
]

dependencies = [
    # Core UI
    "streamlit>=1.40,<2.0",
    "streamlit-mic-recorder>=0.0.8,<1.0",
    "streamlit-authenticator>=0.3.3,<0.5",
    # LLM / AI
    "openai>=1.50,<2.0",
    "groq>=0.11,<1.0",
    # Vector DB / RAG
    "pinecone>=5.0,<7.0",
    "langchain-text-splitters>=0.3,<1.0",
    # Document parsing
    "pypdf>=4.0,<6.0",
    "python-docx>=1.1,<2.0",
    # Voice
    "edge-tts>=6.1,<8.0",
    # Persistence
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    # Config / settings
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    # Security
    "bcrypt>=4.2,<5.0",
    # Resilience
    "tenacity>=8.5,<10.0",
    # Observability
    "structlog>=24.4,<26.0",
    "sentry-sdk>=2.14,<3.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9,<3.0",
]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.8,<5.0",
    "types-PyYAML>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/sabyasacheedas/rupa-ai"
Repository = "https://github.com/sabyasacheedas/rupa-ai"
Issues = "https://github.com/sabyasacheedas/rupa-ai/issues"

[project.scripts]
rupa = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["alembic/versions", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "S",   # flake8-bandit (security)
    "PL",  # pylint
    "TID", # tidy imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert in tests
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use late imports to control config-cache ordering,
# and contain hardcoded test passwords / magic values.
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004", "PLC0415"]
"alembic/**/*.py" = ["E402"]
# Engine/SessionLocal singletons are intentionally module-level mutable state.
"app/db/session.py" = ["PLW0603"]
# Lazy imports are intentional: keeps sentry-sdk optional at runtime.
"app/observability.py" = ["PLC0415"]
"app/runtime_keys.py" = ["PLC0415"]
"app/secrets_loader.py" = ["S110"]
# Chat page renders distinct user-friendly errors for each RupaError subtype.
"app/ui/pages/chat.py" = ["PLR0911"]
"app/ui/pages/login.py" = ["PLR0912", "PLR0915"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy configuration
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = [
    "edge_tts.*",
    "streamlit.*",
    "streamlit.components.*",
    "streamlit_mic_recorder.*",
    "streamlit_authenticator.*",
    "groq.*",
    "openai.*",
    "tenacity.*",
    "structlog.*",
    "structlog.types.*",
    "sentry_sdk.*",
    "sentry_sdk.integrations.*",
    "bcrypt.*",
    "pinecone.*",
    "langchain_text_splitters.*",
    "pypdf.*",
    "docx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["app.services.llm", "app.services.rag"]
disable_error_code = ["misc"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=60",
]
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (may require external services or mocks)",
    "slow: slow-running tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/ui/*",
    "app/main.py",
    "app/cli.py",
    "alembic/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
